<resources>
    <string name="app_name">MVVM Kotlin Sample</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="sign_in">Sign In</string>
    <string name="belum_punya_akun_daftar_disini">Belum punya akun? daftar disini</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nama">Nama</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_account_sign_here">Already have account sign here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="quotes">Qoutes</string>
</resources>