<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.stimednp.mvvmkotlinsample.ui.auth.AuthViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E2E2E2"
        tools:context=".ui.auth.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:padding="16dp">

            <EditText
                android:text="@={viewmodel.name}"
                android:id="@+id/et_name"
                android:layout_width="0dp"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:background="@drawable/background_round_grey"
                android:hint="@string/nama"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:text="@={viewmodel.email}"
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_round_grey"
                android:hint="@string/email"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_name" />

            <EditText
                android:id="@+id/et_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@={viewmodel.password}"
                android:background="@drawable/background_round_grey"
                android:hint="@string/password"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_email" />

            <EditText
                android:id="@+id/et_confirm_pass"
                android:layout_width="0dp"
                android:text="@={viewmodel.passwordconfirm}"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_round_grey"
                android:hint="@string/confirm_password"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_pass" />

            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/lupa_password"
                app:layout_constraintStart_toStartOf="@+id/et_confirm_pass"
                app:layout_constraintTop_toBottomOf="@+id/et_confirm_pass" />

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:onClick="@{viewmodel::onSignUpButttonClick}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_forget_password" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_confirm_pass" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cl_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:onClick="@{viewmodel::onLogin}"
            android:text="@string/already_have_account_sign_here" />

    </RelativeLayout>
</layout>